<resources>
    <string name="app_name">PTE</string>
    <string name="action_settings">Settings</string>
    <string name="speech_record_start">Start Recording</string>
    <string name="speech_record_stop">Stop Recording</string>
    <string name="timer_fragment">Timer Text</string>
    <string name="accuracy">Accuracy %</string>
    <string name="time">00:40</string>
    <string name="showRecordedTextButton">Show recorded text</string>
    <string name="nextButton">Next</string>
    <string name="previousButton">Previous</string>
    <string name="paragraphNumber">Paragraph:</string>
    <string name="initialParaNumber">1</string>
    <string name="audioRecordPlayButton">Start Playing</string>
    <string name="audioRecordStopButton">Stop Playing</string>
    <string name="title_activity_pte_main">PTE Sections</string>

    <string name="readAloud">Read Aloud</string>
    <string name="personalIntroduction">Personal Introduction</string>
    <string name="repeatSentence">Repeat Sentence</string>
    <string name="describeImage">Describe Image</string>
    <string name="retellLecture">Re-tell Lecture</string>
    <string name="shortQuestions">Answer Short Questions</string>

    <string name="summarizeWrittenText">Summarize Written Text</string>
    <string name="essay">Write Essay</string>

    <string name="multipleChoiceSingleAnswer">Multiple Choice Choose Single Answer</string>
    <string name="multipleChoiceMultipleAnswer">Multiple Choice Choose Multiple Answer</string>
    <string name="reorderParagraph">Re-order Paragraphs</string>
    <string name="rFillUps">Reading - Fill In The Blanks</string>
    <string name="rwFillUps">Reading and Writing - Fill In The Blanks</string>

    <string name="summarizeSpokenText">Summarize Spoken Text</string>
    <string name="listMCSA">Listening - Multiple Choice Choose Multiple Answer</string>
    <string name="listMCMA">Listening - Multiple Choice Choose Single Answer</string>
    <string name="lFillUps">Listening - Fill In The Blanks</string>
    <string name="highlightSummary">Highlight Correct Summary</string>
    <string name="missingWord">Select Missing Word</string>
    <string name="highlightIncorrect">Highlight Incorrect Words</string>
    <string name="writeFromDictation">Write From Dictation</string>

    <string name="approachForRA">Approach</string>
    <string name="title_activity_ptemain_card">PTE Sections</string>
    <string name="speakingView">Speaking</string>
    <string name="readAloudSamples">Try it yourself!!!</string>
    <string name="speechRecorderButton">Speech Recorder</string>
    <string name="resetDataMessage">Starting over will clear your progress. Are you sure you want to continue?</string>
    <string name="cancelText">Cancel</string>
    <string name="okText">OK</string>
    <string name="totalParagraphText">%d of %d</string>
    <string name="gotoHomeView">Goto Home</string>
    <string name="restartTest">Restart Test</string>
    <string name="saveResult">Save Result</string>
    <string name="title_activity_repeat_sentence_samples">Repeat Sentence Samples</string>
    <string name="title_repeat_sentence_sample">You will hear a sentence. Please repeat the sentence exactly as you hear it. The recording will start as soon as the sentence ends.</string>

</resources>
