<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.divakarpatil.pte.speaking.ReadAloudSamplesActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_readaloud_samples">

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="78dp"
        android:layout_height="32dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="30dp"
        android:text="@string/time"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/speechRecorderButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/ic_keyboard_voice_black_24dp"
        android:contentDescription="@string/speechRecorderButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentencesTextView" />

    <TextView
        android:id="@+id/sentencesTextView"
        android:layout_width="404dp"
        android:layout_height="209dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTextView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="72dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/accuracy"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentencesTextView" />

    <TextView
        android:id="@+id/accuracyPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="211dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/sentencesTextView" />

    <ImageView
        android:id="@+id/previousButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/ic_navigate_before_disabled_24dp"
        android:contentDescription="@string/previousButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentencesTextView" />

    <ImageView
        android:id="@+id/nextButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="168dp"
        android:background="@drawable/ic_navigate_next_black_24dp"
        android:contentDescription="@string/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentencesTextView" />

    <Button
        android:id="@+id/showRecordTextButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:text="@string/showRecordedTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentencesTextView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/paragraphNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paragraphNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/initialParaNumber"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mediaPlayerButton"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/audioRecordPlayButton"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentencesTextView" />

</android.support.constraint.ConstraintLayout>