<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.divakarpatil.pte.speaking.repeatsentence.RepeatSentenceSamplesActivity"
    tools:showIn="@layout/activity_repeat_sentence_samples">


    <Button
        android:id="@+id/repeatSentenceShowRecordTextButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:text="@string/showRecordedTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatSentenceLinearLayout" />

    <ImageView
        android:id="@+id/repeatSentenceSpeechRecorderButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/ic_keyboard_voice_black_24dp"
        android:contentDescription="@string/speechRecorderButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatSentenceLinearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/repeatSentenceNextButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_navigate_next_black_24dp"
        android:contentDescription="@string/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatSentenceLinearLayout" />

    <LinearLayout
        android:id="@+id/repeatSentenceLinearLayout"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/web_view_border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_repeat_sentence_sample" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/repeatSentencePlayImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:contentDescription="@string/title_activity_repeat_sentence_samples"
                app:srcCompat="@drawable/ic_play_arrow_black_24dp" />

            <SeekBar
                android:id="@+id/repeatSentenceSeekBar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/paragraphNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paragraphNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/initialParaNumber"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
