<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/paragraphResultLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/paragraphRatingsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paragraphNumberTextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paragraphNumber" />

            <TextView
                android:id="@+id/paragraphNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/initialParaNumber" />

            <RatingBar
                android:id="@+id/paragraphRatingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:clickable="false"
                android:max="100"
                android:numStars="5"
                android:stepSize="0.5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paragraphAccuracyLinearLayout"
            android:layout_width="432dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/paragraphAccuracyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuracy" />

            <TextView
                android:id="@+id/paragraphAccuracyValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/initialParaNumber" />
        </LinearLayout>

        <Button
            android:id="@+id/showRecordTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showRecordedTextButton" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</FrameLayout>
